thai-gdc/kubernetes/demo-aws/deploy-ckan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ckan
  name: ckan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckan
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ckan
    spec:
      containers:
      - image: 759076157369.dkr.ecr.ap-southeast-1.amazonaws.com/ckan-core:v1
        name: ckan-thai-gdc-f2g6p
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
         - name: ckandata
           mountPath: /var/lib/ckan
           subPath: ckan_data
        livenessProbe:
           tcpSocket:
              port: 5000
        readinessProbe:
           tcpSocket:
              port: 5000
      volumes:
      - name: ckandata
        persistentVolumeClaim:
          claimName: ckan-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ckan
  name: ckan
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ckan
  type: NodePort
status:
  loadBalancer: {}
