thai-gdc/kubernetes/demo-aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Enable client certificate authentication
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Create the secret containing the trusted ca certificates
    #nginx.ingress.kubernetes.io/auth-tls-secret: "dga/ca-secret"
    # Specify the verification depth in the client certificates chain
    #nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # Specify an error page to be redirected to verification errors
    #nginx.ingress.kubernetes.io/auth-tls-error-page: "http://www.mysite.com/error-cert.html"
    # Specify if certificates are passed to upstream server
    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
  name: aws-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "catalog-aws.dg-paas.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ckan
            port:
              number: 5000
      - pathType: Prefix
        path: "/adminer"
        backend:
          service:
            name: adminer
            port:
              number: 8080
